--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -1,3 +1,5 @@
+<!-- index.html -->
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -5,7 +7,7 @@
     <title>Septic Tank Calculator</title>
 </head>
 <body>
-    <h1>Septic Tank Calculator</h1>
+    <h1>Septic Tank Design Tool</h1>
     <form action="/calculate" method="post">
         <label for="household_size">Household Size:</label>
         <input type="number" id="household_size" name="household_size" required><br><br>
@@ -15,6 +17,18 @@
             <option value="3">3-Chambered Tank</option>
             <option value="4">4-Chambered Tank</option>
         </select><br><br>
+
+        <label for="retention_time">Retention Time (days):</label>
+        <input type="number" id="retention_time" name="retention_time" required><br><br>
+
+        <label for="borehole_distance">Distance to Borehole (m):</label>
+        <input type="number" id="borehole_distance" name="borehole_distance" required><br><br>
+
+        <label for="seasonal_factor">Seasonal Factor:</label>
+        <input type="number" id="seasonal_factor" name="seasonal_factor" required><br><br>
+
+        <label for="sand_thickness">Sand Thickness (m):</label>
+        <input type="number" id="sand_thickness" name="sand_thickness" required><br><br>
 
         <button type="submit">Calculate</button>
     </form>
