--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -46,6 +46,8 @@
         <button type="submit">Calculate</button>
     </form>
 </div>
+<!-- Add this at the bottom of index.html and result.html -->
+<script src="{{ url_for('static', filename='script.js') }}"></script>
 
 </body>
 </html>
