--- a/app/templates/result.html
+++ b/app/templates/result.html
@@ -31,6 +31,8 @@
         <a href="/" class="button">Back to Home</a>
     </div>
 </div>
+<!-- Add this at the bottom of index.html and result.html -->
+<script src="{{ url_for('static', filename='script.js') }}"></script>
 
 </body>
 </html>
