--- a/app/static/styles.css
+++ b/app/static/styles.css
@@ -1,7 +1,23 @@
 /* styles.css */
 
+/* Set the global font to Poppins */
+body, h1, h2, h3, h4, h5, h6, p {
+    font-family: 'Poppins', sans-serif;
+    color: #003366; /* Optional: Set a default dark blue color for headings */
+}
+
+/* Bold styling for headers */
+h1, h2, h3 {
+    font-weight: 600; /* Make headings bolder */
+}
+
+/* Regular weight for paragraph text */
+p {
+    font-weight: 400;
+    color: #333; /* Slightly lighter for normal text */
+}
+
 body {
-    font-family: Arial, sans-serif;
     margin: 0;
     padding: 0;
     display: flex;
