--- a/app/static/styles.css
+++ b/app/static/styles.css
@@ -34,16 +34,21 @@ body {
     padding-top: 20px;
 }
 
+/* Apply Poppins font and bold styling to sidebar title and links */
+.sidebar h2, .sidebar a {
+    font-family: 'Poppins', sans-serif;
+    font-weight: 600; /* Match boldness for headings */
+    color: white;
+}
+
 .sidebar h2 {
     padding: 0 20px;
 }
 
 .sidebar a {
-    color: white;
     padding: 15px 20px;
     text-decoration: none;
     display: block;
-    font-weight: bold;
 }
 
 .sidebar a:hover {
