--- a/app/templates/result.html
+++ b/app/templates/result.html
@@ -41,6 +41,10 @@
     <div id="tank-visualization" style="width: 100%; height: 500px;"></div>
 </div>
 
+    <!-- Add this at the bottom of index.html and result.html for 3d visualization-->
+
+<script src="{{ url_for('static', filename='tankVisualization.js') }}"></script>
+    
 <!-- Add this at the bottom of index.html and result.html -->
 <script src="{{ url_for('static', filename='script.js') }}"></script>
 
